

Summary of important user-visible changes for statistics 1.5.1:
-------------------------------------------------------------------

 Important Notice: 1) `mean` shadows core Octave's respective function
                   2) incompatibility with the `nan` package
 New functions:
 ==============

 ** barttest (fully Matlab compatible)

 ** evcdf (fully Matlab compatible)

 ** evinv (fully Matlab compatible)

 ** evpdf (fully Matlab compatible)

 ** evrnd (fully Matlab compatible)

 ** evstat (fully Matlab compatible)

 ** gpfit (fully Matlab compatible)

 ** gplike (fully Matlab compatible)

 ** gpstat (fully Matlab compatible)

 ** levene_test (options for testtypes, handling NaNs and GROUPS like anova1)

 ** ncfcdf (fully Matlab compatible)

 ** nctcdf (fully Matlab compatible)

 ** ncx2cdf (fully Matlab compatible)

 ** ncx2inv (fully Matlab compatible)

 ** ncx2rnd (fully Matlab compatible)

 ** sampsizepwr (fully Matlab compatible with extra functionality)

 ** vartestn (fully Matlab compatible)

 Improvements:
 =============

 ** bartlett_test: improved functionality, hanlding NaNs and GROUPS like anova1

 ** chi2cdf: added "upper" option and confidence bounds

 ** chi2test: improved functionality, handles 3-way tables

 ** evfit: fixed bug that caused an error when x is a row vector

 ** fcdf: added "upper" option and confidence bounds

 ** gamcdf: added "upper" option and confidence bounds

 ** gpcdf: added "upper" option and confidence bounds

 ** ncx2pdf: reimplemented to be fully MATLAB compatible

 ** normcdf: added "upper" option and confidence bounds

 ** tcdf: added "upper" option

 ** vartest: fixed MATLAB compatibility

 ** vartest2: fixed MATLAB compatibility

 ** ztest: fixed MATLAB compatibility

 Removed Functions:
 ==================

 ** cloglog

 ** nanmean (replaced by mean)

 ** u_test (replaced by ranksum)

 ** var_test (replaced by vartest)

 ** z_test (replaced by ztest)