@@ -226,6 +226,8 @@ Summary of important user-visible changes for statistics 1.5.1:
 
  ** chi2test: improved functionality, handles 3-way tables
 
+ ** crosstab: returns chi-square and p-value for 3-way tables
+
  ** evfit: fixed bug that caused an error when x is a row vector
 
  ** fcdf: added "upper" option and confidence bounds
